--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .terraform/
 .terraform.lock.hcl
-.terraform.tfstate*
-*.tfvars
-*terraform.tfstate.backup
+.terraform.tfstate
+terraform.tfvars
+.terraform.tfstate.backup
